--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="su.thepeople.musicplayer.PlayerFragment"
+        android:name="su.thepeople.musicplayer.DefaultPlayerUI"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_player">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="su.thepeople.musicplayer.LibraryFragment"
+        android:name="su.thepeople.musicplayer.LibraryUI"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_library">
 
