Small fixes:     Make library UI look a little less terrible     remove some unneeded code     Allow DB to sort results, rather that just doing it by title     Allow navigation from player even before user has manually opened library UI

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -21,10 +21,11 @@
             >
         </androidx.recyclerview.widget.RecyclerView>
 
-        <View
+        <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@android:color/darker_gray"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/breadcrumbs"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
