--- a/app/src/main/res/layout/library_ui.xml
+++ b/app/src/main/res/layout/library_ui.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:textColor="@color/near_white"
     tools:context=".LibraryUI">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,11 +28,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/breadcrumbs"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBottom_toTopOf="@id/item_list"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/breadcrumbs" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/item_list"
@@ -39,7 +41,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-
             >
         </androidx.recyclerview.widget.RecyclerView>
 
