--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,24 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources >
     <!-- Base application theme. -->
-    <style name="Base.Theme.MusicPlayer" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.MusicPlayer" parent="Theme.Material3.Dark">
+        <item name="android:colorPrimary">@color/black</item>
     </style>
 
-    <style name="Theme.MusicPlayer" parent="Base.Theme.MusicPlayer" />
+    <style name="LockableButton">
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="UnlockedButton" parent="LockableButton">
+        <item name="android:background">@color/near_black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:tint">@color/near_white</item>
+    </style>
+
+    <style name="LockedButton" parent="LockableButton">
+        <item name="android:background">@color/near_white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:tint">@color/black</item>
+    </style>
+
 </resources>
