--- a/app/src/main/res/layout/library_ui.xml
+++ b/app/src/main/res/layout/library_ui.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:textColor="@color/near_white"
-    tools:context=".LibraryUI">
+    tools:context=".ui.LibraryFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
