--- a/app/src/main/res/layout/breadcrumb_chooser_item.xml
+++ b/app/src/main/res/layout/breadcrumb_chooser_item.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:theme="@style/UnlockedButton"
+        android:textSize="11sp"
         android:text="@string/ph_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
