--- a/app/src/main/res/layout/child_chooser_item.xml
+++ b/app/src/main/res/layout/child_chooser_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,54 +8,58 @@
     android:background="@color/black"
     >
 
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gutter_guideline"
+        app:layout_constraintGuide_percent=".10"
+        android:orientation="vertical"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_guideline"
+        app:layout_constraintGuide_percent=".15"
+        android:orientation="vertical"/>
+
     <ImageView
         android:id="@+id/playButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="4"
         android:theme="@style/UnlockedButton"
         android:src="@drawable/ic_play_button"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gutter_guideline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/desc_play_button"
         />
 
-    <Space
-        android:id="@+id/spacer"
-        android:layout_width="5dp"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        app:layout_constraintStart_toEndOf="@id/playButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
     <TextView
         android:id="@+id/navigateButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:ellipsize="marquee"
+        android:text="@string/ph_item"
         android:textAlignment="viewStart"
         android:theme="@style/UnlockedButton"
-        android:text="@string/ph_item"
-        app:layout_constraintStart_toEndOf="@id/spacer"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/text_guideline"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/text_guideline"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/nonNavigateLabel"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:textAlignment="viewStart"
         android:background="@color/black"
         android:textColor="@color/white"
         android:text="@string/ph_item"
-        app:layout_constraintStart_toEndOf="@id/spacer"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/text_guideline"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
