New scheme for screen locking

--- a/app/src/main/res/layout/extras_ui.xml
+++ b/app/src/main/res/layout/extras_ui.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
@@ -13,19 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="Lock Screen"
+        android:text="@string/fullscreen_mode"
         android:theme="@style/UnlockedButton" />
 
-    <ImageView
-        android:id="@+id/lockButton"
+    <TextView
+        android:id="@+id/forceOnButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:theme="@style/UnlockedButton"
-        android:src="@drawable/ic_lock_button"
-        android:contentDescription="@string/desc_lock_button"
-        tools:ignore="NestedWeights"
-        />
-
+        android:text="@string/auto_wakeup"
+        android:theme="@style/UnlockedButton" />
 
 </LinearLayout>
